# chat

./: .gitignore  Makefile  README.md  app.py  setup.cfg  setup.py
config/: .example.env.bat  .example.env.sh  app.yaml  conf.yaml  conf_test.yaml  db.yaml  telegram.yaml
documentation/: SPECIFICATION.md  conf.py  index.rst  modules.rst  src.database.rst  src.middlewares.rst  src.services.rst  src.utils.rst
documentation/_build/doctrees/: chat.doctree  environment.pickle  index.doctree  module.doctree  modules.doctree  src.database.doctree  src.doctree  src.middlewares.doctree  src.services.doctree  src.utils.doctree  src.views.doctree
documentation/_build/html/: .buildinfo  chat.html  genindex.html  index.html  module.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.database.html  src.html  src.middlewares.html  src.services.html  src.utils.html  src.views.html
documentation/_build/html/_sources/: module.rst.txt  modules.rst.txt  src.database.rst.txt  src.middlewares.rst.txt  src.rst.txt  src.services.rst.txt  src.views.rst.txt
documentation/mockups/: 404.html  500.html  chat.html  index.html
documentation/mockups/static/: style.css
src/: __init__.py
src/database/: __init__.py  __main__.py  db.py  models.py
src/database/migrations/: alembic.ini  env.py
src/database/migrations/versions/: 37c7135b2e47_add_author_msg_table.py  830f578467c1_indexes.py  8847c0204ad3_change_foreignkey_add_indexes.py  a1be75bd0666_initial.py  (+1 more)
src/middlewares/: __init__.py  errors.py  flash.py  log.py  request.py
src/services/: __init__.py  chat_service.py  message_service.py
src/static/: chat.js  style.css
src/static/css/: style.css
src/static/js/: chat.js  index.js  validation.js
src/templates/: 404.html  500.html  _base.html  base.html  chat.html  create_chat.html  index.html
src/templates/errors/: 404.html  500.html  _base.html
src/utils/: cli.py  common.py  config.py  exceptions.py  flash.py  globals.py  log.py  notification.py
src/views/: __init__.py  chat_view.py  create_chat_view.py  index_view.py
tests/: conftest.py  test_chat_view.py  test_config.py  test_create_chat_view.py  test_errors.py  test_index_view.py
