[metadata]
version = attr: src.__version__
description = Chat website
author = attr: src.__author__
author_email = attr: src.__email__
license = attr: src.__license__
python = "^3.6"
url =
classifiers =
    Topic :: Chat,
    Intended Audience :: Internet Users,
    Programming Language :: Python :: 3,

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    aiohttp
    aiopg[sa]
    alembic
    aiohttp-jinja2
    aiohttp_debugtoolbar
    trafaret
    requests
    pyyaml
    faker

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-aiohttp
    coverage
    flake8
    flake8-docstrings
    flake8-builtins
    flake8-quotes

[flake8]
ignore = D100
exclude = __pycache__, build, dist, migrations
max-line-length = 80

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:aiohttp_debugtoolbar.*: